<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="map_api_key">AIzaSyA6QI378BHt9eqBbiJKtqWHTSAZxcSwN3Q</string>
    <string name="app_name">jahezly</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="complete_register">Complete Register</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="confirm">Confirm</string>
    <string name="field_required">Fiels Required</string>
    <string name="country_code">Country Code</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_app">Apout App</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="whats_app">whats App</string>
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="logout">Logout</string>
    <string name="list">List</string>
    <string name="addition">Addition</string>
    <string name="choose">Choose</string>
    <string name="choose_from_drinks">Choose From Drinks</string>
    <string name="add">Add</string>
    <string name="cities">Cities</string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="done">Done</string>
    <string name="please_choose_the_required_branch">Please choose the required branch</string>
    <string name="choose_day">Choose Day</string>
    <string name="choose_time">Choose Time</string>
    <string name="number_of_pepole">Number Of Pepole</string>
    <string name="number_of_children">Number Of Children</string>
    <string name="menu">Menu</string>
    <string name="reservation_confirmation">reservation confirmation</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="show_all_reviews">Show All Reviews</string>
    <string name="menu_images">Restaurant Menu Images</string>
    <string name="rstuarant_images">Rstuarant Images</string>
    <string name="price">Price</string>
    <string name="time_for_children_to_enter">Time for children to enter</string>
    <string name="work_hours">Work Hours</string>
    <string name="payment_type">Payment Type</string>
    <string name="location">Location</string>
    <string name="clothes_system">Clothes system</string>
    <string name="garage">Garage</string>
    <string name="discreption">Discreption</string>
    <string name="book">Book</string>
    <string name="convenience">Convenience</string>
    <string name="order_detials">Order Detials</string>
    <string name="electronic">Electronic</string>
    <string name="cash">Cash</string>
    <string name="copoun">Copoun</string>
    <string name="order_price">Order Price</string>
    <string name="tax">Tax</string>
    <string name="total_price">Total Price</string>
    <string name="complete_order">Complete Order</string>
    <string name="restuarant_detials">Restuarant Detials</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="wait">Wait...</string>
    <string name="no_department_found">No Department Found</string>
    <string name="we_hope_that_you_enter_the_6_digit_temporary_password_that_was_sent_to_your_sent_mobile_number">We hope that you enter the 6-digit temporary password that was sent to your sent mobile number</string>
    <string name="resend">Resend</string>
    <string name="number_of_branches">Branches Num :</string>
    <string name="calories">Calories</string>
    <string name="in">Internal sessions</string>
    <string name="out">External sessions</string>
    <string name="foods">Foods</string>
    <string name="choose_untill_2">Choose Untill 2</string>
    <string name="ryal">R.S</string>
    <string name="Choose_session">Choose Session</string>
    <string name="choose_family">Choose Family Or indvidual</string>
    <string name="Choose_date">Choose Date</string>
    <string name="not_av">Not Available now</string>
    <string name="Choose_time">Choose Time</string>
    <string name="complete">Complete</string>
    <string name="drinks">Drinks</string>
    <string name="order_num">Order Num</string>
    <string name="notifications">Notifications</string>
    <string name="coupon_not_found">Coupon Not Found Are You Want to Complete Order?</string>
    <string name="ok">ok</string>
    <string name="restaurants">Restaurants</string>
    <string name="my_favourite">My Favourite</string>
    <string name="new_order">New Order</string>
    <string name="current">Current</string>
    <string name="restuarant_confirm">Restaurant Confirmed</string>
    <string name="completed">Completed</string>
    <string name="amount">Amount</string>
    <string name="additions">additions</string>
    <string name="sar">SAR</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="place_of_reservation">Place of reservation</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="main_baranch">Main Branch</string>
    <string name="images">Images</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>
