<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>


        <variable
            name="backListener"
            type="com.ghazly.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String"

            />

        <variable
            name="model"
            type="com.ghazly.models.CreateOrderModel" />

        <variable
            name="title"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white"

                    />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/complete_order"
                    android:textColor="@color/white"
                    android:textSize="15sp"

                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detials"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewfoods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/payment_type"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rb_choose1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/rb_bg"
                            android:checked="true"
                            android:padding="5dp"
                            android:text="@string/cash"
                            android:textColor="@color/gray9"
                            android:textSize="15sp" />


                        <RadioButton
                            android:id="@+id/rb_choose2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/rb_bg"
                            android:padding="5dp"
                            android:text="@string/electronic"
                            android:textColor="@color/gray9"
                            android:textSize="15sp"

                            />


                    </RadioGroup>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"

                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/location"
                            android:textColor="@color/black"
                            android:textSize="15sp"

                            />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="8dp"
                            android:src="@drawable/ic_map"
                            android:tint="@color/colorPrimary"

                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"

                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/copoun"
                            android:textColor="@color/black"
                            android:textSize="15sp"

                            />

                        <EditText
                            android:id="@+id/edtcopun"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/small_rounded_btn_gray"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray9"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/order_price"
                                android:textColor="@color/black"
                                android:textSize="15sp"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:gravity="center_vertical"
                                android:text="@{model.total_price}"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"

                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/tax"
                                android:textColor="@color/black"
                                android:textSize="15sp"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:gravity="center_vertical"
                                android:text=""
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"

                                />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal"

                            >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/total_price"
                                android:textColor="@color/black"
                                android:textSize="15sp"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"

                                android:gravity="center_vertical"
                                android:text='@{model.total_price}'
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"

                                />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="90dp"
                    android:background="@drawable/small_rounded_btn_primary"
                    android:text="@string/complete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</layout>